Dummy_Package_for_scratch_org/main/default/objects/MC_Custom_Job_Step__mdt/MC_Custom_Job_Step__mdt.object-meta.xml
<CustomObject>
    <label>MC Custom Job Step</label>
    <pluralLabel>MC Custom Job Steps</pluralLabel>
</CustomObject>