Dummy_Package_for_scratch_org/main/default/objects/MC_Custom_Job_Step__mdt/fields/LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Name__c</fullName>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>