Dummy_Package_for_scratch_org/main/default/objects/MC_Custom_Job_Step__mdt/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>